new feature dto implementation